2003-07-29  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* configure.in: 
	* gdk/glext/gen-gdkglglxext-h.pl: 
	* gdk/x11/gdkglglxext.h: Check GLXVideoSourceSGIX typedef to avoid
	old SGI's glxext.h bug.

	* gdk/gdkglglext.h: 
	* gdk/x11/gdkglglxext.h: 
	* gdk/win32/gdkglwglext.h: Updated.

	* gdk/glext/gen-gdkglglext-h.pl: 
	* gdk/glext/gen-gdkglglxext-h.pl: 
	* gdk/glext/gen-gdkglwglext-h.pl: Include <gdk/glext/*.h>
	extension headers.

	* configure.in: 
	* gdk/glext/Makefile.am: 
	* gdk/glext: Renamed gdk/GL to gdk/glext to prevent <GL/gl.h> from
	including <GL/glext.h> in gdk directory.

2003-07-28  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/viewlw.c: Improved mouse operation.

	* examples/button.c: 
	* examples/multiarb.c: 
	* examples/coolwave.c: 
	* examples/template.c: 
	* examples/font-pangoft2-tex.c: Use gtk_timeout instead of
	gtk_idle. (Dave Andruczyk's advice)

	* examples/logo.c: Removed frame counter.

2003-07-28  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gdk/x11/gdkglglxext.[ch]: Updated.

	* gdk/GL/glxext-extra.h: Added GLX_MESA_agp_offset extension.

	* gdk/gdkglglext.h: 
	* gdk/x11/gdkglglxext.h: 
	* gdk/win32/gdkglwglext.h: Updated.

	* gdk/GL/gen-gdkglglext-h.pl: Define __glext_h_ before
	#include <GL/gl.h> to avoid including system's glext.h.

	* gdk/GL/gen-gdkglglxext-h.pl: Define __glxext_h_ before
	#include <GL/glx.h> to avoid including system's glxext.h.

	* gdk/GL/gen-gdkglwglext-h.pl: Define __wglext_h_ before
	#include <GL/gl.h> to avoid including system's wglext.h.

	* gdk/gdkglglext.h: 
	* gdk/GL/gen-gdkglglext-h.pl: Typedef GLhalfNV if needed.

	* configure.in: Check whether GLhalfNV typedef is needed.

2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* ==== Released 1.0.1 ====

	* configure.in: Version 1.0.1, Binary age 1, interface age 0.

2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/font-pangoft2.c (gl_pango_ft2_render_layout): 